# petompp-web-front

./: Cargo.toml  README.md  dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-pull-request.yml  push-containers.yml  release.yml
front/: .gitignore  Cargo.toml  Trunk.toml  dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
front/locales/: app.yml  en.yml  pl.yml
front/src/: input.css  lib.rs  main.css  main.rs  router.rs  utils.rs
front/src/api/: client.rs  error.rs
front/src/atoms/: label.rs  link.rs  text_input.rs
front/src/components/: header.rs  link.rs  mod.rs
front/src/components/admin/: user_manager.rs
front/src/components/atoms/: button.rs  flag.rs  link.rs  logo.rs  markdown.rs  mod.rs  modal.rs  navbar_item.rs  text_input.rs
front/src/components/editor/: data.rs  editor.rs  mod.rs
front/src/components/editor/atoms/: control.rs  display.rs  editor.rs  mod.rs
front/src/components/organisms/: header.rs  markdown_editor.rs  menu.rs  mod.rs  navbar.rs  user_box.rs  user_manager.rs
front/src/data/: editor.rs  locales.rs  mod.rs  resources.rs  session.rs  user_agent.rs  window.rs
front/src/models/: mod.rs  resource_data.rs  user.rs
front/src/pages/: about.rs  admin_panel.rs  contact.rs  editor.rs  home.rs  login.rs  mod.rs  not_found.rs  page_base.rs  projects.rs  register.rs
front/src/pages/admin/: admin_panel.rs  mod.rs  user_management.rs
locales/: en.yml  pl.yml
src/: input.css  lib.rs  main.rs  router.rs  utils.rs
src/api/: blob.rs  client.rs  editor.rs  error.rs  mod.rs  resource.rs  settings.rs  user.rs
src/components/: mod.rs  navbar.rs  state.rs
src/components/atoms/: carousel.rs  collapse.rs  date_display.rs  flag.rs  label.rs  link.rs  loading.rs  logo.rs  markdown.rs  mod.rs  modal.rs  resource_select.rs  text_input.rs
src/components/editor/: editor.rs
src/components/organisms/: blob_image_select.rs  blob_tags_input.rs  header.rs  image_directory_browser.rs  image_link_input.rs  markdown_editor.rs  markdown_preview.rs  menu.rs  mod.rs  user_box.rs
src/data/: blob.rs  filename.rs  locales.rs  mod.rs  resources.rs  session.rs  window.rs
src/data/locales/: error.rs  localizable.rs  mod.rs  store.rs  tk.rs  (+2 more)
src/hooks/: color_scheme.rs  event.rs  mod.rs
src/models/: blog_data.rs  credentials.rs  mod.rs  user.rs
src/pages/: about.rs  blog.rs  blog_post.rs  contact.rs  editor.rs  home.rs  login.rs  mod.rs  not_found.rs  page_base.rs  project.rs  projects.rs  register.rs
src/router/: admin.rs  blog.rs  mod.rs  route.rs
(+37 files in other folders)
