[package]
name = "petompp-web-front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
stylist = { version = "0.12", features = ["yew", "macros", "parser"] }
yew-router = "0.17"
