[package]
name = "petompp-web-front"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
deref-derive = "0.1"
gloo = "0.10"
lazy_static = "1.4"
markdown = "1.0.0-alpha.12"
petompp-web-models = { git = "https://github.com/PetoMPP/petompp-web-models.git", branch = "0.2.0", features = [
    "timeago",
    "web-sys",
] }
regex = "1.10"
reqwasm = "0.5"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
strum = { version = "0.25", features = ["derive"] }
timeago = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "ClipboardEvent",
    "DataTransfer",
    "HtmlInputElement",
    "HtmlDialogElement",
    "Navigator",
] }
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
yewdux = "0.9"
