[package]
name = "petompp-web-front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
deref-derive = "0.1"
enum-iterator = "1.4"
gloo = "0.10"
lazy_static = "1.4"
markdown = "1.0.0-alpha.12"
reqwasm = "0.5"
rust-i18n = "2.2"
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "HtmlInputElement",
    "HtmlDialogElement",
    "Navigator",
] }
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
yewdux = "0.9"
